--- a/deploy_container.ipynb
+++ b/deploy_container.ipynb
@@ -13,18 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/alexowen/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n"
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +31,7 @@
     "instance_type_url = base_url + \"/types\"\n",
     "create_url = base_url + \"/create\"\n",
     "headers = {\n",
-    "    \"X-API-KEY\": \"wMKxY8d52U3EHmFYnd8qr5y6\", \n",
+    "    \"X-API-KEY\": \"<add-your-key-here>\", \n",
     "    \"Content-Type\" : \"application/json\"\n",
     "}\n",
     "shade_instance_type = \"A6000\"\n",
@@ -58,17 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The cheapest A6000 instance with 1 gpu(s) is: {'cloud': 'massedcompute', 'shade_instance_type': 'A6000', 'cloud_instance_type': 'gpu_1x_a6000', 'configuration': {'memory_in_gb': 48, 'storage_in_gb': 256, 'vcpus': 6, 'num_gpus': 1, 'gpu_type': 'A6000', 'interconnect': 'pcie', 'os_options': ['ubuntu22.04_cuda12.2_shade_os'], 'vram_per_gpu_in_gb': 48}, 'memory_in_gb': 48, 'storage_in_gb': 256, 'vcpus': 6, 'num_gpus': 1, 'gpu_type': 'A6000', 'interconnect': 'pcie', 'hourly_price': 57, 'availability': [{'region': 'us-central-2', 'available': True}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = requests.request(\"GET\", instance_type_url, headers=headers, params=params)\n",
     "instance_types = json.loads(response.text)[\"instance_types\"]\n",
@@ -84,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,17 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"id\":\"4e90f11a-e098-4b11-a9fa-ebc381e9bc9a\",\"cloud_assigned_id\":\"c23ad075-9615-49b9-9a89-e8ee743a12b2\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#easy way to visually see if this request worked\n",
     "print(response.text)"
@@ -143,18 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"instances\":[{\"id\":\"4e90f11a-e098-4b11-a9fa-ebc381e9bc9a\",\"cloud\":\"massedcompute\",\"region\":\"us-central-2\",\"shade_instance_type\":\"A6000\",\"cloud_instance_type\":\"gpu_1x_a6000\",\"cloud_assigned_id\":\"c23ad075-9615-49b9-9a89-e8ee743a12b2\",\"shade_cloud\":true,\"name\":\"cool_gpu_server\",\"configuration\":{\"memory_in_gb\":48,\"storage_in_gb\":256,\"vcpus\":6,\"num_gpus\":1,\"gpu_type\":\"A6000\",\"interconnect\":\"pcie\",\"os\":\"ubuntu22.04_cuda12.2_shade_os\",\"vram_per_gpu_in_gb\":48},\"ip\":\"64.247.196.46\",\"ssh_user\":\"shadeform\",\"ssh_port\":22,\"status\":\"active\",\"status_details\":\"Container run started... View docker progress logs by running 'journalctl -u init-script'\",\"cost_estimate\":\"0.0335054514\",\"hourly_price\":57,\"created_at\":\"2024-02-21T18:03:42.911404Z\",\"deleted_at\":null,\"launch_configuration\":{\"type\":\"docker\",\"docker_configuration\":{\"image\":\"shadeform/lm-eval-harness\",\"envs\":[{\"name\":\"tasks\",\"value\":\"hellaswag\"},{\"name\":\"model\",\"value\":\"mistralai/Mistral-7B-Instruct-v0.2\"}]}}}]}\n",
-      "Instance is active with IP: 64.247.196.46\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "instance_response = requests.request(\"GET\", base_url, headers=headers)\n",
     "\n",
