--- a/find_and_use_gpus.ipynb
+++ b/find_and_use_gpus.ipynb
@@ -27,7 +27,7 @@
     "instance_type_url = base_url + \"/types\"\n",
     "create_url = base_url + \"/create\"\n",
     "headers = {\n",
-    "    \"X-API-KEY\": \"wMKxY8d52U3EHmFYnd8qr5y6\", \n",
+    "    \"X-API-KEY\": \"<Add-your-key-here>\", \n",
     "    \"Content-Type\" : \"application/json\"\n",
     "}\n",
     "a100_shade_instance_type = \"A100_80G\""
