--- a/deploy_container.ipynb
+++ b/deploy_container.ipynb
@@ -31,7 +31,7 @@
     "instance_type_url = base_url + \"/types\"\n",
     "create_url = base_url + \"/create\"\n",
     "headers = {\n",
-    "    \"X-API-KEY\": \"<add-your-key-here>\", \n",
+    "    \"X-API-KEY\": \"<Add-your-key-here>\", \n",
     "    \"Content-Type\" : \"application/json\"\n",
     "}\n",
     "shade_instance_type = \"A6000\"\n",
@@ -71,6 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#If the model you need requires authenticated access, paste your key here\n",
+    "huggingface_token = \"\"\n",
+    "\n",
     "payload = {\n",
     "  \"cloud\": best_instance[\"cloud\"],\n",
     "  \"region\": region,\n",
@@ -90,10 +93,23 @@
     "\t      \t\"name\": \"tasks\",\n",
     "\t      \t\"value\": \"hellaswag\"\n",
     "      \t},\n",
+    "        {\n",
+    "          \"name\": \"num_fewshot\",\n",
+    "          \"value\": \"10\"\n",
+    "        }\n",
     "      ]\n",
     "    }\n",
     "  }\n",
-    "}"
+    "}\n",
+    "\n",
+    "if huggingface_token != \"\":\n",
+    "  token_env_json = {\n",
+    "    \"name\": \"HUGGING_FACE_HUB_TOKEN\",\n",
+    "    \"value\" : huggingface_token\n",
+    "  }\n",
+    "  payload[\"launch_configuration\"][\"docker_configuration\"][\"envs\"].append(token_env_json)\n",
+    "\n",
+    "print(payload)"
    ]
   },
   {
