address docs PR comments

--- a/deploy_container.ipynb
+++ b/deploy_container.ipynb
@@ -67,9 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cloud': 'massedcompute', 'region': 'us-central-2', 'shade_instance_type': 'A6000', 'shade_cloud': True, 'name': 'cool_gpu_server', 'launch_configuration': {'type': 'docker', 'docker_configuration': {'image': 'shadeform/lm-eval-harness', 'envs': [{'name': 'model', 'value': 'mistralai/Mistral-7B-Instruct-v0.2'}, {'name': 'tasks', 'value': 'hellaswag'}, {'name': 'num_fewshot', 'value': '10'}]}}}\n"
+     ]
+    }
+   ],
    "source": [
     "#If the model you need requires authenticated access, paste your key here\n",
     "huggingface_token = \"\"\n",
@@ -82,6 +90,7 @@
     "  \"name\": \"cool_gpu_server\",\n",
     "  \"launch_configuration\": {\n",
     "    \"type\": \"docker\",\n",
+    "     #This selects the image to launch, and sets environment variables \"tasks\" and \"num_fewshot\"\n",
     "    \"docker_configuration\": {\n",
     "      \"image\": \"shadeform/lm-eval-harness\",\n",
     "      \"envs\": [\n",
@@ -102,6 +111,7 @@
     "  }\n",
     "}\n",
     "\n",
+    "#Add another environment variable to the payload by adding a json\n",
     "if huggingface_token != \"\":\n",
     "  token_env_json = {\n",
     "    \"name\": \"HUGGING_FACE_HUB_TOKEN\",\n",
