nb for basic serving

--- a/basic_serving_vllm.ipynb
+++ b/basic_serving_vllm.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will find and deploy the most affordable GPU's on the market with the Shadeform API. We limit our search to machines with 1xA6000 machines, but that is easily configurable below.\n",
+    "In this notebook we will find and deploy the most affordable GPU's on the market with the Shadeform API, deploy a model serving framework called VLLM to serve Mistral. We limit our search to machines with 1xA6000 machines, but that is easily configurable below.\n",
     "\n",
-    "This notebook leverages the docker container created under `llm-eval-harness-benchmarking` to run basic huggingface benchmarks for a given huggingface model.\n",
-    "\n",
-    "It also re-uses code from [find_and_use_gpus.ipynb](link.com) for using the Shadeform API to find available instances."
+    "This Notebook re-uses code from [find_and_use_gpus.ipynb](https://github.com/shadeform/examples/blob/main/find_and_use_gpus.ipynb) for using the Shadeform API to find available instances, and leverages code from [deploy_container.ipynb](https://github.com/shadeform/examples/blob/main/deploy_container.ipynb)"
    ]
   },
   {
@@ -44,15 +42,7 @@
     "    'available' : True,\n",
     "    'num_gpus' : num_gpus\n",
     "}\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "response = requests.request(\"GET\", instance_type_url, headers=headers, params=params)\n",
     "instance_types = json.loads(response.text)[\"instance_types\"]\n",
     "best_instance = None\n",
@@ -62,7 +52,7 @@
     "    region = best_instance['availability'][0]['region']\n",
     "    print(f\"The cheapest {gpu_type} instance with {num_gpus} gpu(s) is:\", best_instance)\n",
     "else:\n",
-    "    print(f\"No instances of type {gpu_type} instance with {num_gpus} gpu(s) found.\")\n"
+    "    print(f\"No instances of type {gpu_type} instance with {num_gpus} gpu(s) found.\")"
    ]
   },
   {
@@ -74,6 +64,8 @@
     "#If the model you need requires authenticated access, paste your key here\n",
     "huggingface_token = \"\"\n",
     "\n",
+    "model_id = \"mistralai/Mistral-7B-v0.1\"\n",
+    "\n",
     "payload = {\n",
     "  \"cloud\": best_instance[\"cloud\"],\n",
     "  \"region\": region,\n",
@@ -84,19 +76,13 @@
     "    \"type\": \"docker\",\n",
     "     #This selects the image to launch, and sets environment variables \"tasks\" and \"num_fewshot\"\n",
     "    \"docker_configuration\": {\n",
-    "      \"image\": \"shadeform/lm-eval-harness\",\n",
-    "      \"envs\": [\n",
-    "      \t{\n",
-    "\t      \t\"name\": \"model\",\n",
-    "\t      \t\"value\": \"mistralai/Mistral-7B-Instruct-v0.2\"\n",
-    "      \t},\n",
-    "      \t{\n",
-    "\t      \t\"name\": \"tasks\",\n",
-    "\t      \t\"value\": \"hellaswag\"\n",
-    "      \t},\n",
+    "      \"image\": \"vllm/vllm-openai:latest\",\n",
+    "      \"args\": \"--model \" + model_id,\n",
+    "      \"envs\": [],\n",
+    "      \"port_mappings\": [\n",
     "        {\n",
-    "          \"name\": \"num_fewshot\",\n",
-    "          \"value\": \"10\"\n",
+    "          \"container_port\": 8000,\n",
+    "          \"host_port\": 8000\n",
     "        }\n",
     "      ]\n",
     "    }\n",
@@ -121,15 +107,7 @@
    "outputs": [],
    "source": [
     "#request the best instance that is available\n",
-    "response = requests.request(\"POST\", create_url, json=payload, headers=headers)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "response = requests.request(\"POST\", create_url, json=payload, headers=headers)\n",
     "#easy way to visually see if this request worked\n",
     "print(response.text)"
    ]
@@ -141,14 +119,65 @@
    "outputs": [],
    "source": [
     "instance_response = requests.request(\"GET\", base_url, headers=headers)\n",
-    "\n",
+    "ip_addr = \"\"\n",
     "print(instance_response.text)\n",
     "instance = json.loads(instance_response.text)[\"instances\"][0]\n",
     "instance_status = instance['status']\n",
     "if instance_status == 'active':\n",
     "    print(f\"Instance is active with IP: {instance['ip']}\")\n",
+    "    ip_addr = instance['ip']\n",
     "else:\n",
     "    print(f\"Instance isn't yet active: {instance}\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Wait until the previous cell has an IP address associated with it, and then add a few minutes for the VLLM server to stand up. \n",
+    "#It is usually best to look at the logs on the dashboard to tell when the model is loaded.\n",
+    "\n",
+    "model_list_response = requests.get(f'http://{ip_addr}:8000/v1/models')\n",
+    "print(model_list_response.text)\n",
+    "\n",
+    "vllm_headers = {\n",
+    "    'Content-Type': 'application/json',\n",
+    "}\n",
+    "\n",
+    "json_data = {\n",
+    "    'model': model_id,\n",
+    "    'prompt': 'San Francisco is a',\n",
+    "    'max_tokens': 7,\n",
+    "    'temperature': 0,\n",
+    "}\n",
+    "\n",
+    "completion_response = requests.post(f'http://{ip_addr}:8000/v1/completions', headers=vllm_headers, json=json_data)\n",
+    "\n",
+    "print(completion_response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Alternatively, you can call this with the Open AI library, but requires that to be downloaded\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "# Modify OpenAI's API key and API base to use vLLM's API server.\n",
+    "openai_api_key = \"EMPTY\"\n",
+    "openai_api_base = f\"http://{ip_addr}:8000/v1\"\n",
+    "client = OpenAI(\n",
+    "    api_key=openai_api_key,\n",
+    "    base_url=openai_api_base,\n",
+    ")\n",
+    "completion = client.completions.create(model=model_id,\n",
+    "                                      prompt=\"San Francisco is a\")\n",
+    "print(\"Completion result:\", completion)\n",
+    "\n"
    ]
   },
   {
@@ -175,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
