Adding notebooks for TEI and TGI

--- a/basic_serving_vllm.ipynb
+++ b/basic_serving_vllm.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#If the model you need requires authenticated access, paste your key here\n",
+    "#If the model you need requires authenticated access, paste your key here. Needed for Mistral.\n",
     "huggingface_token = \"\"\n",
     "\n",
     "model_id = \"mistralai/Mistral-7B-v0.1\"\n",
@@ -74,7 +74,6 @@
     "  \"name\": \"cool_gpu_server\",\n",
     "  \"launch_configuration\": {\n",
     "    \"type\": \"docker\",\n",
-    "     #This selects the image to launch, and sets environment variables \"tasks\" and \"num_fewshot\"\n",
     "    \"docker_configuration\": {\n",
     "      \"image\": \"vllm/vllm-openai:latest\",\n",
     "      \"args\": \"--model \" + model_id,\n",
@@ -164,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Alternatively, you can call this with the Open AI library, but requires that to be downloaded\n",
+    "#Alternatively, you can call this with the Open AI library, but requires that installed \n",
     "from openai import OpenAI\n",
     "\n",
     "# Modify OpenAI's API key and API base to use vLLM's API server.\n",
@@ -204,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
