--- a/serve_tgi.ipynb
+++ b/serve_tgi.ipynb
@@ -1,24 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this notebook we will find and deploy the most affordable GPU's on the market with the Shadeform API. We limit our search to machines with 1xA6000 machines, but that is easily configurable below.\n",
-    "\n",
-    "This notebook leverages the docker container created under `llm-eval-harness-benchmarking` to run basic huggingface benchmarks for a given huggingface model.\n",
-    "\n",
-    "It also re-uses code from [find_and_use_gpus.ipynb](https://github.com/shadeform/examples/blob/main/find_and_use_gpus.ipynb) for using the Shadeform API to find available instances."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "import json"
+    "import json\n"
    ]
   },
   {
@@ -44,17 +33,14 @@
     "    'available' : True,\n",
     "    'num_gpus' : num_gpus\n",
     "}\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "response = requests.request(\"GET\", instance_type_url, headers=headers, params=params)\n",
+    "\n",
+    "#We need to filter out any clouds that don't have the launch configuration supported, at the time of writing that is just runpod\n",
+    "launch_config_not_supported = [\"runpod\"]\n",
+    "\n",
     "instance_types = json.loads(response.text)[\"instance_types\"]\n",
+    "instance_types = [x for x in instance_types if x['cloud'] not in launch_config_not_supported]\n",
     "best_instance = None\n",
     "region = None\n",
     "if len(instance_types) > 0:\n",
@@ -62,7 +48,7 @@
     "    region = best_instance['availability'][0]['region']\n",
     "    print(f\"The cheapest {gpu_type} instance with {num_gpus} gpu(s) is:\", best_instance)\n",
     "else:\n",
-    "    print(f\"No instances of type {gpu_type} instance with {num_gpus} gpu(s) found.\")\n"
+    "    print(f\"No instances of type {gpu_type} instance with {num_gpus} gpu(s) found.\")"
    ]
   },
   {
@@ -71,7 +57,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#If the model you need requires authenticated access, paste your key here\n",
+    "model_id = \"mistralai/Mistral-7B-v0.1\"\n",
+    "port = 8000\n",
+    "\n",
+    "#If the model you need requires authenticated access, paste your Hugging Face api key here\n",
     "huggingface_token = \"\"\n",
     "\n",
     "payload = {\n",
@@ -79,24 +68,17 @@
     "  \"region\": region,\n",
     "  \"shade_instance_type\": shade_instance_type,\n",
     "  \"shade_cloud\": True,\n",
-    "  \"name\": \"cool_gpu_server\",\n",
+    "  \"name\": \"text_generation_inference_server\",\n",
     "  \"launch_configuration\": {\n",
-    "    \"type\": \"docker\",\n",
-    "     #This selects the image to launch, and sets environment variables \"tasks\" and \"num_fewshot\"\n",
+    "    \"type\": \"docker\", \n",
     "    \"docker_configuration\": {\n",
-    "      \"image\": \"shadeform/lm-eval-harness\",\n",
-    "      \"envs\": [\n",
-    "      \t{\n",
-    "\t      \t\"name\": \"model\",\n",
-    "\t      \t\"value\": \"mistralai/Mistral-7B-Instruct-v0.2\"\n",
-    "      \t},\n",
-    "      \t{\n",
-    "\t      \t\"name\": \"tasks\",\n",
-    "\t      \t\"value\": \"hellaswag\"\n",
-    "      \t},\n",
+    "      \"image\": \"ghcr.io/huggingface/text-generation-inference:1.4\",\n",
+    "      \"args\": \"--model-id \" + model_id + f\" --port {port}\",\n",
+    "      \"envs\": [],\n",
+    "      \"port_mappings\": [\n",
     "        {\n",
-    "          \"name\": \"num_fewshot\",\n",
-    "          \"value\": \"10\"\n",
+    "          \"container_port\": 8000,\n",
+    "          \"host_port\": 8000\n",
     "        }\n",
     "      ]\n",
     "    }\n",
@@ -111,6 +93,7 @@
     "  }\n",
     "  payload[\"launch_configuration\"][\"docker_configuration\"][\"envs\"].append(token_env_json)\n",
     "\n",
+    "\n",
     "print(payload)"
    ]
   },
@@ -121,15 +104,7 @@
    "outputs": [],
    "source": [
     "#request the best instance that is available\n",
-    "response = requests.request(\"POST\", create_url, json=payload, headers=headers)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "response = requests.request(\"POST\", create_url, json=payload, headers=headers)\n",
     "#easy way to visually see if this request worked\n",
     "print(response.text)"
    ]
@@ -141,12 +116,12 @@
    "outputs": [],
    "source": [
     "instance_response = requests.request(\"GET\", base_url, headers=headers)\n",
-    "\n",
-    "print(instance_response.text)\n",
+    "ip_addr = \"\"\n",
     "instance = json.loads(instance_response.text)[\"instances\"][0]\n",
     "instance_status = instance['status']\n",
     "if instance_status == 'active':\n",
     "    print(f\"Instance is active with IP: {instance['ip']}\")\n",
+    "    ip_addr = instance['ip']\n",
     "else:\n",
     "    print(f\"Instance isn't yet active: {instance}\" )"
    ]
@@ -156,7 +131,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Wait until the previous cell has an IP address associated with it, and then add a few minutes for the VLLM server to stand up. \n",
+    "#It is usually best to look at the logs on the dashboard to tell when the model is loaded.\n",
+    "\n",
+    "\n",
+    "tgi_headers = {\n",
+    "    'Content-Type': 'application/json',\n",
+    "}\n",
+    "\n",
+    "json_data = {\n",
+    "    'model': model_id,\n",
+    "    'prompt': 'New York City is the',\n",
+    "    'max_tokens': 7,\n",
+    "}\n",
+    "\n",
+    "completion_response = requests.post(f'http://{ip_addr}:{port}/v1/completions', headers=tgi_headers, json=json_data)\n",
+    "\n",
+    "print(completion_response.text)"
+   ]
   }
  ],
  "metadata": {
